[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Center Dashboard/placeholdercircle.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Center Dashboard/Dial.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Main Dashboard/accelerate.gd" type="Script" id=3]
[ext_resource path="res://Fonts/wakuwaku.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/mini-wakuwaku.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/Center Dashboard/Middle-Screen.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]

[node name="placeholdercircle" type="Sprite" parent="."]
position = Vector2( 697.796, 199.717 )
scale = Vector2( 0.477981, 0.477981 )
texture = ExtResource( 1 )

[node name="Parent_Dial" type="Node2D" parent="placeholdercircle"]
position = Vector2( -2.09216, -6.27643 )
rotation = -0.785398

[node name="Dial" type="Sprite" parent="placeholdercircle/Parent_Dial"]
position = Vector2( 0, 1.42534 )
rotation = 4.88692
texture = ExtResource( 2 )
centered = false
offset = Vector2( -194, -7.843 )

[node name="Middle-Screen" type="Sprite" parent="."]
position = Vector2( 465.417, 206.67 )
scale = Vector2( 0.394011, 0.394011 )
texture = ExtResource( 6 )

[node name="MPH_Label" type="Label" parent="Middle-Screen"]
margin_left = -213.874
margin_top = -90.8744
margin_right = 197.126
margin_bottom = 60.1256
custom_fonts/font = SubResource( 1 )
text = "0mph"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 460.0
margin_top = 389.0
margin_right = 1018.0
margin_bottom = 598.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_left = 65.9418
margin_top = 40.3059
margin_right = 217.942
margin_bottom = 104.306
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Button"]
margin_left = 6.61145
margin_top = 18.9424
margin_right = 145.611
margin_bottom = 45.9424
custom_fonts/font = ExtResource( 4 )
text = "accelerate"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Control/Button" to="Control/Button" method="_on_Button_button_down"]
[connection signal="button_up" from="Control/Button" to="Control/Button" method="_on_Button_button_up"]
